# CrocNDoc

./: .gitignore  Makefile  README.md  make_c.bat  project.geany
assets/: WaterStuff.json  butterfly.json  butterfly2.json  croc_idle.json  doc_forward  spikedBall
assets/levels/: bossRoom.json  sewers.json  terra.json  tutorial.json  water.json
assets/manual/: crocndoc.pptx
assets/meshes/: croc_walk  diamond.json  doc_glide_right.json  doc_idle  explosion.json  explosion2.json  front.json  game_over.json  gauner.json  gravitasUp.json  halunke.json  heart.json  hole.json  marvin.json  schelm.json  schuft.json  soul.json  star.json  tunichtgut.json  warning.json
include/: defines.h  game.h  mesh.h  plot.h  stage.h  track.h  types.h  xutility.h
include/cnd/: defines.h  draw_queue.h  entities.h  game.h  globals.h  levels.h  mesh.h  music.h  plot.h  sound.h  track.h  types.h  world.h  xutils.h
include/lib/: monitor.h  print.h
source/: main.c  mesh.c  xutility.c
source/config/: cartridge.c
src/: game.c  plot.c  stage.c  track.c
src/cnd/: draw_queue.c  (+11 more)
tools/shader2vectrex/: CMakeLists.txt  external.cmake
tools/shader2vectrex/include/: gl.h
tools/shader2vectrex/shaders/: filter.frag  fire.frag  lines.frag  lines.vert  portal.frag  quad.vert  render.frag  skeletonize.frag  spark.frag
tools/shader2vectrex/src/: main.cpp
tools/stageeditor/: CMakeLists.txt  external.cmake
tools/stageeditor/assets/shaders/: font.frag  font.vert  grid.frag  grid.vert  lines.frag  lines.vert
tools/stageeditor/include/: gl.h  mesh.h
tools/stageeditor/src/: main.cpp
(+22 files in other folders)
